--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
 		"gulp-htmlmin": "^5.0.1",
 		"gulp-rename": "^2.0.0",
 		"gulp-sass": "^5.1.0",
-		"sass": "^1.63.3"
+		"sass": "^1.63.3",
+		"webpack-cli": "^5.1.4"
 	},
 	"browserslist": [
 		"last 2 chrome versions",
